fixed scrollbar issues

--- a/src/page.css
+++ b/src/page.css
@@ -1,3 +1,10 @@
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+  max-height: 100%;
+  overflow-y: hidden;
+}
+
 .page div {
   height: auto;
   width: auto;
